# RiskTesting

./: CMakeLists.txt  LICENSE  README.md  readme.md  usage.md
data/: pnl_Gaussian_noise.csv  pnl_exp_decay_jump.csv  pnl_oscillations.csv  pnl_random_walk_positive_drift.csv  pnl_volatility.csv  sample_pnl.csv
include/atm/: Metrics.hpp  Reporter.hpp  RiskModel.hpp  Runner.hpp  Utils.hpp
models/: BasicVaR.cpp  BasicVaR.hpp
reports/: junit.xml  results.csv  summary.json
src/: Metrics.cpp  Reporter.cpp  Runner.cpp  Utils.cpp
tests/: test_main.cpp  test_volatility.cpp
